fix methods